[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/atlas_1bit/Sprout_0.atlastex" type="Texture" id=1]
[ext_resource path="res://Scripts/Sprout.gd" type="Script" id=2]
[ext_resource path="res://Scenes/entities/Sproutling.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/entities/Food.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "alchemize"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, -1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "wiggle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ), Vector2( 0, 0 ), Vector2( -2, 0 ), Vector2( 0, 0 ) ]
}

[node name="Sprout" type="Node2D" groups=["sprout"]]
script = ExtResource( 2 )
sproutling_scene = ExtResource( 3 )
food_scene = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AgeTimer" type="Timer" parent="Sprite"]
wait_time = 2.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="StatAge" type="Label" parent="." groups=["stat"]]
margin_left = -7.0
margin_top = -11.0
margin_right = 23.0
margin_bottom = 1.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 8
size_flags_vertical = 0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = 0
text = "AGE"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/alchemize = SubResource( 3 )
anims/wiggle = SubResource( 4 )

[connection signal="timeout" from="Sprite/AgeTimer" to="." method="_on_AgeTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
